tests/behavior/success/while_break1.bz
function main() -> i32
{
	while (true)
	{
		break;
		return 1;
	}
	return 0;
}
