tests/behavior/error/optional_get_value2.bz
function get_optional() -> ?i32
{
	return null;
}

function main()
{
	__builtin_optional_get_value(get_optional());
}
